terminando la pag

--- a/about.html
+++ b/about.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Mi Primera Pagina</title>
+
+		<style type="text/css">
+		h1{color: blue;}
+		h2{color: orange;}
+		</style>
+		<title>nosotros</title>
 		<meta charset="UTF-8">
 		<meta name="keywords" content="Baby Center, Artiulos de bebe, Santa Elena, Ecuador">
 		<meta name="description" content="Centro de articulos de bebe">
@@ -29,9 +34,11 @@
 		<div id="wrapper">
 			<section>
 				<img src="img/logo.jpeg" alt="logo" class="profile-photo">
+				<center>
 				<h3>Acerca de Baby Center</h3>
 				<p>Encuentra los mejores articulos para tu bebe</p>
 				<p>Siguenos en twitter como  <a href="https://twitter.com/sarydelaa"></a></p>
+				</center>
 			</section>
 			<footer>
 				<center>
