--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 		<meta name="keywords" content="Baby Center, Artiulos de bebe, Santa Elena, Ecuador">
 		<meta name="description" content="Centro de articulos de bebe">
 		<meta name="author" content="Sary">
-		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link href='https://fonts.googleapis.com/css?family=Lobster|Josefin+Sans:600,600italic' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<link rel="stylesheet" type="text/css" href="css/responsive.css">
 	</head>
 	<body>
 		<header>
