--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link href='https://fonts.googleapis.com/css?family=Lobster|Josefin+Sans:600,600italic' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<link rel="stylesheet" type="text/css" href="css/responsive.css">
 	</head>
 	<body>
 		<header>
