--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link href='https://fonts.googleapis.com/css?family=Lobster|Josefin+Sans:600,600italic' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<link rel="stylesheet" type="text/css" href="css/responsive.css">
 	</head>
 	<body>
 		<header>
@@ -27,7 +28,12 @@
 			</nav>
 		</header>
 		<div id="wrapper">
-			<section>
+			<section id="primary">
+				<h3> Informacion General</h3>
+				<p>En este pagina podras encontrar todo sobre lo que necesites para tu bebe</p>
+				<p>Si no aparece en nuestro portal, dejanos un mensaje y lo creamos para ti</p>
+				</section>
+			<section id="secondary">
 				<ul class="contact-info">
 					<li class="phone">
 						<a href="tel: +59396152913">+59396152913</a>
