--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
 		<link href='https://fonts.googleapis.com/css?family=Lobster|Josefin+Sans:600,600italic' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<link rel="stylesheet" type="text/css" href="css/responsive.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
 		<header>
