fin pagina web nueva

--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
 			<nav>
 				<ul>
 					<li><a href="index.html"class="selected">Galeria</a></li>
+					<li><a href="jugueteria.html">Jugueteria</a></li>
 					<li><a href="about.html">Acerca</a></li>
 					<li><a href="contact.html">Contacto</a></li>
+
 				</ul>	
 			</nav>
 		</header>
