--- a/jugueteria.html
+++ b/jugueteria.html
@@ -22,31 +22,26 @@
 			
 			<nav>
 				<ul>
-					<li><a href="index.html"class="selected">Galeria</a></li>
-					<li><a href="jugueteria.html">Jugueteria</a></li>
+					<li><a href="index.html">Galeria</a></li>
+					<li><a href="jugueteria.html" class="selected">Jugueteria</a></li>
 					<li><a href="about.html">Acerca</a></li>
 					<li><a href="contact.html">Contacto</a></li>
-
+					
+					
 				</ul>	
 			</nav>
 		</header>
 		<div id="wrapper">
 			<section id="primary">
 				<h3> Informacion General</h3>
-				<p>En este pagina podras encontrar todo sobre lo que necesites para tu bebe</p>
+				<p>Los mejores juguetes que puedes imaginar para tu bebe</p>
 				<p>Si no aparece en nuestro portal, dejanos un mensaje y lo creamos para ti</p>
 				</section>
 			<section id="secondary">
-				<ul class="contact-info">
-					<li class="phone">
-						<a href="tel: +59396152913">+59396152913</a>
-					</li> 
-					<li class="mail">
-						<a href="mailito:sarycdo@gmail.com">sarycdo@gmail.com</a>						
-					</li>
-					<li class="twitter">
-						<a href="http://twitter.com/intent/tweet?screen_name=sarydelaa">@sarydelaa</a>						
-					</li>
+				<ul id="galeria">
+					<li><img src="img/centro-de-actividades.jpg" alt="actividades"></li>
+					<li><img src="img/coche-cuna.jpg" alt="cochecuna"></li>
+					<li><img src="img/silla-portable.jpg" alt="silla"></li>	
 				</ul>
 			</section>
 			<footer>
