--- a/about.html
+++ b/about.html
@@ -28,8 +28,10 @@
 			<nav>
 				<ul>
 					<li><a href="index.html" >Galeria</a></li>
+					<li><a href="jugueteria.html">Jugueteria</a></li>
 					<li><a href="about.html"class="selected">Acerca</a></li>
 					<li><a href="contact.html">Contacto</a></li>
+
 				</ul>	
 			</nav>
 		</header>
