--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
 			
 				<a href="index.html" id= "logo">
 					<h1>Baby Center</h1>
-					<h2>Articulos de bebe</h2>
 				</a>
 			
-			<nav>
+			<nav id="menu">
 				<ul>
 					<li><a href="index.html"class="selected">Galeria</a></li>
 					<li><a href="jugueteria.html">Jugueteria</a></li>
@@ -33,9 +32,19 @@
 		<div id="wrapper">
 			<section>
 				<ul id="galeria">
-					<li><img src="img/accesorio.jpeg" alt="accesorio"></li>
-					<li><img src="img/articulos.jpeg" alt="artiulos"></li>
-					<li><img src="img/cunas.jpeg" alt="cunas"></li>	
+				
+					<li>
+						<a href="img/accesorio.jpeg">
+						<img src="img/accesorio.jpeg" alt="Accesorio">
+						</a></li>
+					<li>
+						<a href="img/articulos.jpeg">
+						<img src="img/articulos.jpeg" alt="Articulos">
+						</a></li>
+					<li>
+						<a href="img/cunas.jpeg">
+						<img src="img/cunas.jpeg" alt="cunas">
+						</a></li>	
 				</ul>
 			</section>
 			<footer>
@@ -50,6 +59,8 @@
 				</center>
 			</footer>
 		</div>
+		<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+		<script src="js/app.js" type="text/javascript" charset= "UTF-8"></script>
 	</body>
 </html>
 
