--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 				</a>
 			
 			<nav>
-				<ul>
+				<ul id="menu">
 					<li><a href="index.html" >Galeria</a></li>
 					<li><a href="jugueteria.html">Jugueteria</a></li>
 					<li><a href="about.html"class="selected">Acerca</a></li>
@@ -56,6 +56,9 @@
 				</center>
 			</footer>
 		</div>
+		<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+		<script src="js/app.js" type="text/javascript" charset= "UTF-8"></script>
+	</body>
 	</body>
 </html>
 
