--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 				</a>
 			
 			<nav>
-				<ul>
+				<ul id="menu">
 					<li><a href="index.html"class="selected">Galeria</a></li>
 					<li><a href="jugueteria.html">Jugueteria</a></li>
 					<li><a href="about.html">Acerca</a></li>
@@ -61,6 +61,9 @@
 				</center>
 			</footer>
 		</div>
+		<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+		<script src="js/app.js" type="text/javascript" charset= "UTF-8"></script>
+	</body>
 	</body>
 </html>
 
