--- a/jugueteria.html
+++ b/jugueteria.html
@@ -21,7 +21,7 @@
 				</a>
 			
 			<nav>
-				<ul>
+				<ul id ="menu">
 					<li><a href="index.html">Galeria</a></li>
 					<li><a href="jugueteria.html" class="selected">Jugueteria</a></li>
 					<li><a href="about.html">Acerca</a></li>
@@ -56,6 +56,9 @@
 				</center>
 			</footer>
 		</div>
+		<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+		<script src="js/app.js" type="text/javascript" charset= "UTF-8"></script>
+	</body>
 	</body>
 </html>
 
